Updated profile page

--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -123,13 +123,13 @@ section.module.parallax-3 {
               </div>
 
               <div class="input-field col s12">
-                <i class="material-icons prefix">toc</i>
+                <i class="material-icons prefix">perm_contact_calendar</i>
                 <input name="trip[start_date]" id="date" type="date" class="datepicker">
                 <label for="date">Start Date</label>
               </div>
 
               <div class="input-field col s12">
-                <i class="material-icons prefix">toc</i>
+                <i class="material-icons prefix">perm_contact_calendar</i>
                 <input name="trip[end_date]" id="date2" type="date" class="datepicker">
                 <label for="date2">End Date</label>
               </div>
