--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -15,15 +15,15 @@
   </script>
   <style>
   #fixed_map{
-        height: 100%;
+        height: 400px;
         width: 560px;
         display: inline-block;
         vertical-align: top;
         background-color: #CCC;
-        position: fixed;  
+        /*position: fixed;  */
       }
       #map{
-        height: 100%;
+        height: 400px;
         width: 560px;
         border: 1px solid black;
         display: inline-block;
@@ -49,7 +49,7 @@
           </tr>
           <tr>
               <th data-field="id">Destination</th>
-              <td><%= @trip.destination %></td>
+              <td id = 'destination'><%= @trip.destination %></td>
           </tr>
           <tr>
               <th data-field="id">Description</th>
@@ -60,6 +60,91 @@
               <td><%= @trip.start_date.to_date %> ~ <%= @trip.end_date.to_date %></td>
           </tr>
         </thead>
+      <div id="fixed_map">
+        <div id="map">
+          <% count = 0 %>
+          <script>
+            var places = []
+          </script>
+          <% @places.each do |p| %>
+          <script> places.push("<%= p.location %>")</script>
+          <% end %>
+          <script>
+
+            function initMap() {
+              console.log(places)
+
+              var geocoder = new google.maps.Geocoder();
+              var address = document.getElementById('destination').innerHTML
+              var trip_location = geocoder.geocode({'address': address}, function(results, status){
+                if (status == google.maps.GeocoderStatus.OK) {
+                  map.setCenter(results[0].geometry.location);
+                  var marker = new google.maps.Marker({
+                      map: map,
+                      position: results[0].geometry.location
+                  });
+                } else {
+                  alert("Geocode was not successful for the following reason: " + status);
+                }
+             });
+              var labels = "123456789";
+              var labelind = 0;
+              for (var i = 0; i<places.length; i++){
+                var place_location = geocoder.geocode({'address': places[i]}, function(results, status){
+                  if (status == google.maps.GeocoderStatus.OK) {
+
+                    var marker = new google.maps.Marker({
+                        map: map,
+                        position: results[0].geometry.location,
+                        label: labels[labelind++]
+                    });
+                  } else {
+                    alert("Geocode was not successful for the following reason: " + status);
+                  }
+              })};
+              console.log(address)
+              var mapDiv = document.getElementById('map');
+              var map = new google.maps.Map(mapDiv, {
+                zoom: 10
+              });
+            }
+
+          </script>
+<!--           <script>
+          
+
+            function initMap() {
+              var mapDiv = document.getElementById('map');
+              var map = new google.maps.Map(mapDiv, {
+                center: {lat: 44.540, lng: -78.546},
+                zoom: 8
+              });
+              
+              
+              
+            function geocodeAddress(geocoder, resultsMap) {
+            var address = "Space Needle";
+            geocoder.geocode({'address': address}, function(results, status) {
+              if (status === google.maps.GeocoderStatus.OK) {
+                resultsMap.setCenter(results[0].geometry.location);
+                var marker = new google.maps.Marker({
+                  map: resultsMap,
+                  position: results[0].geometry.location
+                });
+              } else {
+                alert('Geocode was not successful for the following reason: ' + status);
+              }
+          });
+
+            }
+
+          </script> -->
+          <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhfWWMebSl09VdkaFt8D7yGnb5xUXi3A4&callback=initMap">
+          </script>
+          
+        </div>
+      </div>
           <% if Like.find_by(user_id: current_user.id, likeable_id: @trip.id, likeable_type: "Trip") %>
 		    <form action='/likes' method='POST'>
 		      <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
@@ -77,24 +162,7 @@
 		    </form>
 		  <% end %>
 
-		  <div id="fixed_map">
-		    <div id="map">
-		      <script>
-		        function initMap() {
-		          var mapDiv = document.getElementById('map');
-		          var map = new google.maps.Map(mapDiv, {
-		            center: {lat: 44.540, lng: -78.546},
-		            zoom: 8
-		          });
-		        }
 
-		      </script>
-		      <script async defer
-		        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhfWWMebSl09VdkaFt8D7yGnb5xUXi3A4&callback=initMap">
-		      </script>
-		      
-		    </div>
-		  </div>
   <b>There are <%= Like.where(likeable_type: "Trip", likeable_id: @trip.id).count %> users who like this trip.</b>
       </table>
 
@@ -116,6 +184,7 @@
         <div class="row">
           <form class="col s12" action="/places" method="POST">
             <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+            <input name = 'place[trip_id]' value = "<%= @trip.id %>" type = 'hidden'>
             <div class="container">
             <div class="row">
               <div class="input-field col s12">
@@ -133,8 +202,6 @@
                 <input id="date" type="date" class="datepicker" name="place[date]">
                 <label for="date">Date</label>
               </div>
-
-
             </div>
             </div>
             <button type="submit" class="waves-effect waves-light btn-large">Add Place</button>
@@ -185,7 +252,7 @@
 		<% end %>
 		<tr>
 			<td>Location:</td>
-			<td><%= p.location %></td>
+			<td id = 'location_<%= count %>'><%= p.location %></td>
 		</tr>
 		<tr>
 			<td>Description:</td>
