--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -140,7 +140,7 @@
 		</tr>
 		<tr>
 			<td>Date:</td>
-			<td><%= p.datetime %> </td>
+			<td><%= p.datetime.to_date %> </td>
 		</tr>
 	</table>
 	<% end %>
