--- a/app/views/trips/to_destination.html.erb
+++ b/app/views/trips/to_destination.html.erb
@@ -15,7 +15,7 @@
       <% @trips.each do |t| %>
 
     <div class="row">
-        <div class="col s12 m7">
+        <div class="col s12">
           <div class="card">
             <div class="card-image">
               <img src="images/sample-1.jpg">
